# cryptoscholar

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT.md  README.md  ROADMAP.md  SUBMISSIONS.md  TASK_BOARD.md  TECH.md  glama.json  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
cryptoscholar/: __init__.py  server.py
cryptoscholar/data/: alternative_me.py  binance.py  coingecko.py  defillama.py  watchlist_db.py
cryptoscholar/market/: context.py
cryptoscholar/ta/: hmm_regime.py  indicators.py  regime.py  scoring.py
cryptoscholar/tools/: analyze.py  correlate.py  debate.py  market_context.py  rank.py  report.py  top_coins.py  train_regime.py  watchlist.py
tests/: test_correlate.py  test_fear_greed.py  test_hmm_regime.py  test_indicators.py  test_market_context.py  test_mtf.py  test_obv.py  test_report.py  test_scoring.py  test_top_coins.py  test_watchlist.py
