[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoscholar"
version = "0.4.0"
description = "Crypto technical analysis MCP server powered by Claude AI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.100.0",
    "bandit>=1.7.0",
]

[project.scripts]
cryptoscholar = "cryptoscholar.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=line"
filterwarnings = [
    "ignore:The 'mode.copy_on_write' option is deprecated",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cryptoscholar*"]
